syntax = "proto3";
option csharp_namespace = "EventTriangleAPI.Authorization.BusinessLogic.Protos";
package AzureAd;

service AzureAd {
  rpc ReceiveToken (AzureAdRequest) returns (AzureAdReply);
}

message AzureAdRequest {
  string code = 1;
  string code_verifier = 2;
}

message AzureAdReply {
  string token = 1;
}